[gd_scene load_steps=10 format=3 uid="uid://yndcuat2bes8"]

[ext_resource type="Script" uid="uid://leucp5j6h525" path="res://scrips/dolphin.gd" id="1_ielvd"]
[ext_resource type="Texture2D" uid="uid://b5tpkum5ix7vk" path="res://assets/PNG/animals 1.png" id="2_5d7l8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5d7l8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bcd0l"]
atlas = ExtResource("2_5d7l8")
region = Rect2(90, 0, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5hi6"]
atlas = ExtResource("2_5d7l8")
region = Rect2(0, 45, 45, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_drih1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcd0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5hi6")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_baqva"]
atlas = ExtResource("2_5d7l8")
region = Rect2(0, 90, 45, 45)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsjms"]
atlas = ExtResource("2_5d7l8")
region = Rect2(90, 45, 45, 45)

[sub_resource type="SpriteFrames" id="SpriteFrames_r24de"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_baqva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsjms")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[node name="Dolphin" type="Area2D"]
scale = Vector2(2, 2)
script = ExtResource("1_ielvd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5d7l8")

[node name="helped_dolphin" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_drih1")
autoplay = "default"
frame_progress = 0.637187

[node name="trashy_dolphin" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_r24de")
autoplay = "default"
frame_progress = 0.431282

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
